<resources>
    <string name="app_name">食物派</string>
    <string name="food_name">食物百科</string>
    <string name="toEat_name">逛吃</string>
    <string name="my_name">我的</string>
    <string name="myPhoto_name">我的照片</string>
    <string name="myCollection_name">我的收藏</string>
    <string name="foodData_name">上传食物数据</string>
    <string name="myOrder_name">我的订单</string>
    <string name="queryFood_name">查 询 食 物 信 息</string>
    <string name="search_name">请输入食物名称</string>
    <string name="diet_name">饮食分析</string>
    <string name="searchVs_name">搜索对比</string>
    <string name="scanVs_name">扫码对比</string>
</resources>
