<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="lanou.foodpie.MainActivity">

    <FrameLayout
        android:id="@+id/frameMain"
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.7"
        android:orientation="horizontal"
        android:layout_height="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioGroup
                android:id="@+id/rgMain"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/rbFood"
                    android:layout_gravity="center"
                    android:button="@null"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/food_name"/>

                <RadioButton
                    android:layout_gravity="center"
                    android:id="@+id/rbEat"
                    android:button="@null"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/toEat_name"
                    android:layout_height="match_parent"/>
                <RadioButton
                    android:id="@+id/rbMy"
                    android:button="@null"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/my_name"
                    android:layout_height="match_parent"/>
            </RadioGroup>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
