<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/custom_title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@mipmap/img_my_bg"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_name"
            android:textColor="#f8faf8"
            android:layout_marginTop="10dp"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@mipmap/ic_analyse_default"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:background="@drawable/shape"
            android:padding="0dp"
            android:id="@+id/myLogInBtn"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:textColor="#f9faf9"
            android:textSize="17dp"
            android:text="点击登录"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/myPhotoLl"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="11dp"
            android:background="@mipmap/ic_my_photo"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:layout_gravity="center_vertical"
            android:text="@string/myPhoto_name"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="270dp"
                android:background="@mipmap/ic_arrow_right_normal"/>
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="360dp"
        android:layout_height="0.1dp"
        android:layout_gravity="center"
        android:background="#9c9b9b">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/myCollectionLl"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="11dp"
            android:background="@mipmap/ic_my_collect"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:layout_gravity="center_vertical"
            android:text="@string/myCollection_name"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="270dp"
                android:background="@mipmap/ic_arrow_right_normal"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="360dp"
        android:layout_height="0.1dp"
        android:layout_gravity="center"
        android:background="#acabab">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/foodDataLl"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="11dp"
            android:background="@mipmap/ic_my_upload"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:layout_gravity="center_vertical"
            android:text="@string/foodData_name"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="242dp"
                android:background="@mipmap/ic_arrow_right_normal"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="360dp"
        android:layout_height="0.1dp"
        android:layout_gravity="center"
        android:background="#c4c3c3">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/myOrderLl"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginLeft="11dp"
            android:background="@mipmap/ic_my_order"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:layout_gravity="center_vertical"
            android:text="@string/myOrder_name"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginLeft="270dp"
                android:background="@mipmap/ic_arrow_right_normal"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#f2f1f1">

    </LinearLayout>


</LinearLayout>